--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@ layout: default
 	<section id='production-usage'>
 		<h5>Trusted and used in production by</h5>
 		comming soon...
-<!--		<div class="row">
-			<img src="images/libgit2/logo-github@2x.png" alt="GitHub" width="83" height="38" />
-			<img src="images/libgit2/logo-microsoft@2x.png" alt="Microsoft" width="150" height="32" />
-			<img src="images/libgit2/logo-plastic@2x.png" alt="Plastic SCM" width="139" height="29" />
+		<div class="row">
+			<img src="images/libgit2/logo-dbb@2x.png" alt="Digital Bitbox" width="84" height="50" />
 		</div>
+        <!--
 		<div class="row">
 			<img src="images/libgit2/logo-beanstalk@2x.png" alt="Beanstalk" width="118" height="37" />
 			<img src="images/libgit2/logo-striata@2x.png" alt="Striata" width="104" height="25" />
