--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
 		<h5>Trusted and used in production by</h5>
 		comming soon...
 		<div class="row">
-			<img src="images/libgit2/logo-dbb@2x.png" alt="Digital Bitbox" width="84" height="50" />
+			<img src="images/libbtc/logo-dbb@2x.png" alt="Digital Bitbox" width="84" height="50" />
 		</div>
         <!--
 		<div class="row">
