fix bottom links
Signed-off-by: Jonas Schnelli <dev@jonasschnelli.ch>

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@ layout: default
 	</section>
 	<section id='production-usage'>
 		<h5>Trusted and used in production by</h5>
-		comming soon...
 		<div class="row">
 			<img src="images/libbtc/logo-dbb@2x.png" alt="Digital Bitbox" width="84" height="50" />
 		</div>
@@ -52,6 +51,7 @@ layout: default
 </div>
 <aside id='sidebar'>
 	<h5>Language Bindings</h5>
+    There are currently no bindings. Go ahead, start one!
     <!--
 	<ul id='primary-languages'>
 		<li id='rugged'>
